# cryptofolio-rs

./: .env.dist  .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
coinmarketcap/: Cargo.toml
coinmarketcap/src/: models.rs
core/: Cargo.toml
core/src/: lib.rs  models.rs
migrations/: 20210808073755_create_cryptocurrencies.sql
server/: Cargo.toml
server/src/: error.rs  main.rs  templates.rs
server/src/request/: flash.rs  mod.rs  request.rs
server/templates/: base.html  cryptocurrency_add.html  index.html
src/: main.rs  models.rs
