[package]
name = "cryptofolio"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "3"
env_logger = "0.8"
dotenv = "0.15.0"
failure = "0.1.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
fast_log="1.3"
rbatis = { version = "2.0" }