[package]
name = "cryptofolio-server"
version = "0.1.0"
edition = "2018"

[dependencies]
cryptofolio-core = { path = "../core" }
actix-web = "3"
actix-session = "0.4.1"
tera = "1"
dotenv = "0.15.0"
env_logger = "0.8"
failure = "0.1.8"
fast_log="1.3"
log = "0.4"
rbatis = { version = "2.0", default-features = false, features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "*", features = ["json"] }
